--- a/Section-18-Final-Project/vuejs-complete/package.json
+++ b/Section-18-Final-Project/vuejs-complete/package.json
@@ -33,7 +33,9 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {
+      "no-unused-vars": ["error", { "vars": "all", "args": "after-used", "ignoreRestSiblings": false }]
+    }
   },
   "browserslist": [
     "> 1%",
